refactor: ai/impl 提示词改用 Java 21 text block（可读性重构）